DuPont DevSB/src/objects/SFDC_Questions__c.object
<CustomObject>
    <fields>
        <fullName>AllowChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow change of a script result.   Only Applicable if Script.AllowContinuation is true</description>
        <inlineHelpText>Allow edit of a script result.   Only Applicable if Script.AllowContinuation is true</inlineHelpText>
        <label>Allow Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer_Format__c</fullName>
        <description>Only includes Radio Button today, as that is what the scoring supports.  When multiple answers can be chosen a multi select option can be added.</description>
        <label>Answer Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Radio Button</fullName>
                    <default>true</default>
                    <label>Radio Button</label>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSSStyle__c</fullName>
        <description>Used to apply inline style to input elements</description>
        <inlineHelpText>Used to apply inline style to input elements</inlineHelpText>
        <label>CSS Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <label>DataType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Radiolist</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Textarea</fullName>
                </value>
                <value>
                    <fullName>MultiSelect Checkboxes</fullName>
                </value>
                <value>
                    <fullName>MultiSelect Picklist</fullName>
                </value>
                <value>
                    <fullName>Section - TextBlock</fullName>
                </value>
                <value>
                    <fullName>Section - Header</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultAnswer__c</fullName>
        <description>Default Answer</description>
        <label>DefaultAnswer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Weightage__c</fullName>
        <label>Weightage</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>Text entry field that allows to assign a question to a group.This can be used to group questions and scoring in Reports or dashboards.</description>
        <label>Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_for_Scripts__c</fullName>
        <formula>(HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01530000000JWzS&quot;, &quot;Help for Scripts&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help for Scripts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Where the field Is Required.</description>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the field is visible on the SiteScript page.  This can be used for hide bindings for static information to a record (recordtype, ownerid) , or for softly removing obsolete fields</description>
        <label>IsVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LongText__c</fullName>
        <description>If this field is populated the question will text will be replaced by this longer version.</description>
        <inlineHelpText>If this field is populated the question will text will be replaced by this longer version.</inlineHelpText>
        <label>LongText</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MaxNumber__c</fullName>
        <description>if datatype is Number then Maximum number allowed; if datatype Text or text area it determines the max number of chars.</description>
        <inlineHelpText>if datatype is Number then Maximum number allowed; if datatype Text or text area it determines the max number of chars.</inlineHelpText>
        <label>Max Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinNumber__c</fullName>
        <description>Minimum number allowed used for SiteScript validation if datatype is Number.</description>
        <inlineHelpText>Minimum number allowed used for SiteScript validation if datatype is Number.</inlineHelpText>
        <label>Min Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutParameter__c</fullName>
        <description>SiteScript Only: If this field is populated, and an answer exists this outbound parameter is applied to the redirect used in the SiteScript</description>
        <inlineHelpText>SiteScript Only: If this field is populated, and an answer exists this outbound parameter is applied to the redirect used in the SiteScript</inlineHelpText>
        <label>Outbound Parameter</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Coach__c</fullName>
        <description>Coaching advice for the person asking the question.</description>
        <label>Question Coach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SaveResult__c</fullName>
        <defaultValue>true</defaultValue>
        <description>uncheck this if you do not want it to be added to the script header.</description>
        <label>Save Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Save_To_Field__c</fullName>
        <description>The name of the data field to save the answers to this question back to.</description>
        <label>Save To Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This relationship serves no programatic purpose. It may be useful to note the intended script when creating the questions, especially as the number of questions increase.</description>
        <label>Script</label>
        <referenceTo>SFDC_Script__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <description>Code/name used to Identify Question when selecting using the SiteScript class.  This allow you to select a question wo/ the need bound to the id or the name which has a tenancy to change.</description>
        <externalId>true</externalId>
        <inlineHelpText>Code/name used to Identify Question when selecting using the SiteScript class.  This allow you to select a question wo/ the need bound to the id or the name which has a tenancy to change.</inlineHelpText>
        <label>ShortName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationError__c</fullName>
        <description>The description to show if validation does not pass</description>
        <label>ValidationError</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationRegEx__c</fullName>
        <description>The regular expression used for validation</description>
        <label>ValidationRegEx</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WriteToField__c</fullName>
        <description>The API name of the field to populate on the WriteToObject</description>
        <inlineHelpText>The API name of the field to populate on the WriteToObject</inlineHelpText>
        <label>WriteToField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>layout__c</fullName>
        <description>Defines the layout information for input fields.</description>
        <inlineHelpText>multi-select checkbox flow</inlineHelpText>
        <label>layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>lineDirection</fullName>
                </value>
                <value>
                    <fullName>pageDirection</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Script__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>IsVisible__c</columns>
        <columns>IsRequired__c</columns>
        <columns>AllowChange__c</columns>
        <columns>SaveResult__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>CallScript</fullName>
        <active>true</active>
        <description>Call Script Question</description>
        <label>Call Script</label>
    </recordTypes>
    <recordTypes>
        <fullName>SiteScriptQuestion</fullName>
        <active>true</active>
        <description>Site Script Question</description>
        <label>SiteScript Question</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>